--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,2 +1,2 @@
 [start]
-cmd = "uvicorn server:app --host 0.0.0.0 --port 6000"
+cmd = "sh -c 'uvicorn server:app --host 0.0.0.0 --port ${PORT:-6000}'"
